    * [LANG-443] - DateUtils - improve tests
    * [LANG-538] - FastDateFormat - call getTime() on a calendar to ensure timezone is in the right state
    * [LANG-547] - FastDateFormat - Remove unused field
    * [LANG-506] - Entities missing final modifiers; thread-safety issues
    * [LANG-584] - ExceptionUtils - use immutable lock target
    * [LANG-477] - ExtendedMessageFormat - OutOfMemory with a pattern containing single quotes
    * [LANG-457] - NumberUtils - createNumber() thows a StringIndexOutOfBoundsException for "l"
    * [LANG-521] - NumberUtils - isNumber(String) and createNumber(String) both modified to support '2.'
    * [LANG-432] - StringUtils - improve handling of case-insensitive Strings
    * [LANG-552] - StringUtils - replaceEach() no longer NPEs when null appears in the last String[]
    * [LANG-460] - StringUtils - correct JavaDocs for startsWith() and startsWithIgnoreCase()
    * [LANG-421] - StringEscapeUtils - escapeJava() escapes '/' characters
    * [LANG-450] - StringEscapeUtils - change escapeJavaStyleString() to throw UnhandledException instead swallowing IOException
    * [LANG-419] - WordUtils - fix StringIndexOutOfBoundsException when lower is greater than the String length
    * [LANG-523] - StrBuilder - Performance improvement by doubling the size of the String in ensureCapacity
    * [LANG-575] - Compare, Equals and HashCode builders - use ArrayUtils to avoid creating a temporary List
    * [LANG-467] - EqualsBuilder - removing the special handling of BigDecimal (LANG-393) to use compareTo 
    * [LANG-574] - HashCodeBuilder - Performance improvement: check for isArray to short-circuit the 9 instanceof checks
    * [LANG-520] - HashCodeBuilder - Changing the hashCode() method to return toHashCode()
    * [LANG-459] - HashCodeBuilder - reflectionHashCode() can generate incorrect hashcodes
    * [LANG-487] - ToStringBuilder - make default style thread-safe
    * [LANG-472] - RandomUtils - nextLong() always produces even numbers
